other/block-pod-exec-by-namespace-label/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: pod-exec-label-ns01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: pod-exec-label-ns02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: pod-exec-label-ns03
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod04
  namespace: pod-exec-label-ns04
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command: ["sleep", "300"]
