other/block-pod-exec-by-namespace-label/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-exec-by-namespace-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
