other/block-pod-exec-by-namespace-label/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-pod-exec-by-namespace-label
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-pod-exec-by-namespace-label.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: pods.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - sleep:
        duration: 10s
  - name: step-04
    try:
    - script:
        content: if kubectl exec -n pod-exec-label-ns02 pod02 -- ls; then exit 1;else
          exit 0; fi
    - script:
        content: if kubectl exec -n pod-exec-label-ns02 deploy/deployment02 -- ls;
          then exit 1;else exit 0; fi
    - script:
        content: kubectl exec -n pod-exec-label-ns01 pod01 -- ls
    - script:
        content: kubectl exec -n pod-exec-label-ns03 pod03 -- ls
    - script:
        content: kubectl exec -n pod-exec-label-ns04 pod04 -- ls
    - script:
        content: kubectl exec -n pod-exec-label-ns01 deploy/deployment01 -- ls
    - script:
        content: kubectl exec -n pod-exec-label-ns03 deploy/deployment03 -- ls
    - script:
        content: kubectl exec -n pod-exec-label-ns04 deploy/deployment04 -- ls
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n pod-exec-label-ns01
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n pod-exec-label-ns02
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n pod-exec-label-ns03
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n pod-exec-label-ns04
